Miscellaneous changes.  Setting baseline

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :event_date %><br>
-    <%= f.datetime_select :event_date %>
+    <%= f.date_select :event_date %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
