--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,6 +6,7 @@
       <th>First name</th>
       <th>Last name</th>
       <th>Notes</th>
+      <th>Events</th>
       <th></th>
       <th></th>
       <th></th>
@@ -18,6 +19,7 @@
         <td><%= person.first_name %></td>
         <td><%= person.last_name %></td>
         <td><%= person.notes %></td>
+        <td><%= person.events_as_string %></td>
         <td><%= link_to 'Show', person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
