--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= person.first_name %></td>
         <td><%= person.last_name %></td>
         <td><%= person.notes %></td>
-        <td><%= person.events_as_string %></td>
+        <td><%= truncate(person.events_as_string, length:60) %></td>
         <td><%= link_to 'Show', person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
