--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the People controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.events-list {
+	//background-color: #000000;
+	padding-bottom:15px;
+}
+
+.event-data {
+	display:inline;
+	background-color: #f0f0f0;
+	padding-right:15px;
+}
+
+.event-date {
+	@extend .event-data;
+}
+
+.event-date-distance-container {
+	@extend .event-data;
+	display:inline;
+}
+
+.event-date-distance {
+	display:inline;
+	border:1px solid black;
+	width:80px;
+}
+
+.event-date-description {
+	@extend .event-data;
+}
+
