--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -5,30 +5,13 @@
 .events-list {
 	//background-color: #000000;
 	padding-bottom:15px;
+	text-align:left;
 }
 
-.event-data {
-	display:inline;
-	background-color: #f0f0f0;
+.event-data th td {
+	margin-left:15px;
+	margin-right:15px;
+	margin-right:15px;
+	padding-left:15px;
 	padding-right:15px;
 }
-
-.event-date {
-	@extend .event-data;
-}
-
-.event-date-distance-container {
-	@extend .event-data;
-	display:inline;
-}
-
-.event-date-distance {
-	display:inline;
-	border:1px solid black;
-	width:80px;
-}
-
-.event-date-description {
-	@extend .event-data;
-}
-
