--- a/app/views/people/_person_events.html.erb
+++ b/app/views/people/_person_events.html.erb
@@ -1,8 +1,8 @@
 <table class="events-list">
 	<tr>
 		<th>Event</th>
-		<th>Distance</th>
 		<th>Description</th>
+		<th>Next Occasion Will Be</th>
 	</tr>
 
 <%= render :partial => 'person_event', :collection => @person.events, :as => :event %>
