--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,19 @@
  *= require_self
  *= require_tree .
  */
+
+.events-list {
+	padding-bottom:15px;
+	text-align:left;
+}
+
+.event-data {
+	margin-left:15px;
+	margin-right:15px;
+	margin-right:15px;
+	padding-right:15px;
+}
+
+.event-data th td {
+	padding-left:15px;
+}
