--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,8 @@
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <li><%= link_to "People", people_path  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Upcoming Events", upcoming_events_upcoming_events_path  %></li>
+              <!-- <li><%= link_to "Link3", "/path3"  %></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -77,7 +77,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>&copy; Me! 2013</p>
       </footer>
 
     </div> <!-- /container -->
